# inciweb-pipeline

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
docker/: Dockerfile
inciweb_pipeline/: __init__.py  __main__.py  aqi_util.py  config.py  db.py  incident_manager.py  near_me_util.py  payload_generator.py  s3.py  sql_util.py
inciweb_pipeline/sql/: query_fasm_inciweb.sql
