[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inciweb-pipeline"
version = "0.1.0"
description = "Inciweb chart data service pipelines. Prefect-agnostic."
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.26",
    "pandas>=2.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.scripts]
inciweb-pipeline = "inciweb_pipeline.__main__:main"

[tool.setuptools.packages.find]
include = ["inciweb_pipeline*"]

[tool.setuptools.package-data]
inciweb_pipeline = ["sql/*.sql"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]
